2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/include/style/main.css: some
	fixes.

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: Small changes. Make
	alert action list sorted (in the same order of extra action
	list that appears at the defined alert list)

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: When creating new
	alert, wrong action might be assigned to the alert (if you had
	some deleted actions in the past).

2013-07-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/style/images/*,
	mobile/include/style/jquery.mobile-1.3.1.css,
	mobile/include/javascript/jquery.js, 
	mobile/include/javascript/jquery.mobile-1.3.1.js: added the
	jquery mobile, and made some changes in the css.
	
	* mobile/include/style/main.css, mobile/operation/agents.php,
	mobile/include/ui.class.php: some fixes.

2013-07-04 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_graph.php: fixed include javascript in the
	static image for boolean module graph.
	
	* mobile/operation/alerts.php, mobile/operation/agent.php,
	mobile/operation/events.php,
	mobile/operation/module_graph.php,
	mobile/operation/modules.php,
	mobile/operation/networkmaps.php,
	mobile/operation/groups.php,
	mobile/operation/agents.php,
	mobile/operation/tactical.php,
	mobile/operation/networkmap.php,
	mobile/include/style/main.css,
	mobile/include/ui.class.php: a lot of fixes in mobile.

2013-07-03 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/operation/events.php, mobile/operation/module_graph.php,
	mobile/operation/modules.php, mobile/operation/networkmaps.php,
	mobile/operation/groups.php, mobile/operation/agents.php,
	mobile/operation/tactical.php, mobile/operation/networkmap.php,
	mobile/operation/alerts.php, mobile/operation/agent.php,
	mobile/include/ui.class.php: added the back button in the head and